@@ -1,5 +1,15 @@
 2011-08-25  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tap/awk: allow escaping of TAP directives
+	* lib/tap-driver.sh (setup_result_obj): Handle escaping of TAP
+	directives in a way tat is (mostly) compatible by what is done
+	by the TAP::Parser module.
+	With this change, the tests `tap-escape-directive.test' and
+	`tap-escape-directive-2.test' now also pass with the shell/awk
+	implementation of the TAP driver.
+
+2011-08-25  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	coverage: more about escaping of TAP directives
 	* tests/tap-escape-directive.test: Make grepping of testsuite
 	progress output slightly stricter.
